# interpretability

./: .gitignore  EDA.ipynb  core.py  data.csv  main.py  pyproject.toml  requirements.txt
assets/: style.css  stylesheet.css
data/: credit_debts.csv
data/model/: model.cbm
src/interpretability/: app.py
src/interpretability/analysis/: explainer.py
src/interpretability/assets/: style.css
src/interpretability/components/: feature_list.py  view_tabs.py
src/interpretability/data/: __init__.py
src/interpretability/pages/: explainability_page.py
